Finalized: Updated README with correct clone URL and added production-ready .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,39 @@
-# Telegram
+# ===============================================
+# Core Application Configuration
+# ===============================================
+
+# Port on which the application will run (used by uvicorn/Docker)
+PORT=8000
+
+# ===============================================
+# Telegram Bot Configuration
+# ===============================================
 TELEGRAM_TOKEN=your-telegram-bot-token
 TELEGRAM_WEBHOOK_URL=https://your-domain.com/webhook/telegram
 
-# OpenAI
+# ===============================================
+# OpenAI (AI/SEO Engine) Configuration
+# ===============================================
 OPENAI_API_KEY=your-openai-api-key
 OPENAI_MODEL=gpt-4o-mini
 
-# Stripe
+# ===============================================
+# Stripe (Payment) Configuration
+# ===============================================
 STRIPE_SECRET=your-stripe-secret-key
 STRIPE_PRICE_PRO=price_XXXXXXXXXXXXXXXX
 STRIPE_WEBHOOK_SECRET=whsec_XXXXXXXXXXXXXXXX
 
-# Redis
+# ===============================================
+# Database & Cache
+# ===============================================
+# Used by Python: The redis service name in docker-compose is 'redis'.
 REDIS_URL=redis://redis:6379/0
-
-# Database
+# Path for SQLite DB file
 DB_PATH=seo_bot.db
 
-# Free tier limit
+# ===============================================
+# Free Tier Settings
+# ===============================================
+# Daily free generation limit for users
 FREE_LIMIT=5
