--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+# requirements.txt
 fastapi==0.103.2
 uvicorn[standard]==0.23.1
-aiogram==3.2.1
+aiogram==3.3.0  # <--- পরিবর্তন করা হয়েছে 
 redis==5.2.0
 openai==1.32.0
 python-dotenv==1.0.1
