--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # requirements.txt
 fastapi==0.103.2
-uvicorn[standard]==0.23.1
-aiogram==3.3.0  # <--- পরিবর্তন করা হয়েছে 
+uvicorn==0.23.2
+aiogram==3.3.0
 redis==5.2.0
 openai==1.32.0
 python-dotenv==1.0.1
-tenacity==9.2.0
+tenacity  
