--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ fastapi==0.103.2
 uvicorn==0.23.2
 aiogram==3.3.0
 redis==5.2.0
-openai>=1.55.0
-httpx==0.27.2
+google-generativeai
 python-dotenv==1.0.1
 tenacity
 stripe
