--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.103.2
 uvicorn==0.23.2
 aiogram==3.3.0
 redis==5.2.0
-google-generativeai
+google-generativeai>=0.8.3
 python-dotenv==1.0.1
 tenacity
 stripe
